# bertcorrector

./: COMO_TESTAR.md  Dockerfile  FIXES.md  PRODUCTION_GUIDE.md  README.md  corrections_dict.py  deploy.sh  docker-compose.yml  download_pdfs.py  main.py  models.py  pyproject.toml  test_corrections.py  test_local.py  test_quick.sh  utils.py
app/: main.py  utils.py
bertcorrector/: __init__.py
configs/nginx/: Dockerfile  default.conf  grafana.conf  nginx.conf
docs/: POETRY_MIGRATION.md
monitoring/grafana/: Dockerfile
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: Dockerfile  prometheus.yml
monitoring/prometheus/rules/: alerts.yml
scripts/: deploy.sh  health-check.sh  poetry-deps.sh
services/api-gateway/: Dockerfile  main.py  pyproject.toml  start.sh
services/languagetool/: Dockerfile  languagetool.properties  start-languagetool.sh
services/languagetool/config/: custom-rules.xml  languagetool.conf
services/languagetool/rules/: custom-portuguese.xml
services/languagetool/userdict/: portuguese.txt
services/spacy-enhancer/: Dockerfile  main.py  pyproject.toml  start.sh
