[project]
name = "bertcorrector"
version = "0.1.0"
description = ""
authors = [
    {name = "venysssssssssss",email = "viniciussport2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
