[tool.poetry]
name = "bert-corrector"
version = "0.1.0"
description = "API de correção gramatical com BERTimbau"
authors = ["Seu Nome <seu@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
transformers = "^4.40.0"
torch = "^2.2.0"
scipy = "^1.13.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"