[tool.poetry]
name = "bertcorrector"
version = "1.0.0"
description = "Scalable text correction system using LanguageTool and SpaCy"
authors = ["BertCorrector Team <team@bertcorrector.com>"]
readme = "README.md"
packages = [{include = "bertcorrector"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
