[tool.poetry]
name = "spacy-enhancer"
version = "2.0.0"
description = "SpaCy enhancer service for semantic analysis"
authors = ["BertCorrector Team <team@bertcorrector.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
spacy = "^3.7.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
